--- a/.github/workflows/push-ecr.yml
+++ b/.github/workflows/push-ecr.yml
@@ -32,5 +32,5 @@ jobs:
         ECR_REPOSITORY: erp-backend
         IMAGE_TAG: ${{ github.sha }}
       run: |
-        docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG -t $ECR_REGISTRY/$ECR_REPOSITORY:latest .
-        docker push -a $ECR_REGISTRY/$ECR_REPOSITORY
+        docker build -t public.ecr.aws/g3h6f1a5/erp-backend:$IMAGE_TAG -t public.ecr.aws/g3h6f1a5/erp-backend:latest .
+        docker push -a public.ecr.aws/g3h6f1a5/erp-backend
