--- a/.github/workflows/push-ecr.yml
+++ b/.github/workflows/push-ecr.yml
@@ -20,7 +20,7 @@ jobs:
       with:
         aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
         aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        aws-region: ap-south-1
+        aws-region: us-east-1
 
     - name: Login to Amazon ECR
       id: login-ecr
@@ -32,5 +32,6 @@ jobs:
         ECR_REPOSITORY: erp-backend
         IMAGE_TAG: ${{ github.sha }}
       run: |
+        aws ecr-public get-login-password --region us-east-1 | docker login --username AWS --password-stdin public.ecr.aws/g3h6f1a5
         docker build -t public.ecr.aws/g3h6f1a5/erp-backend:$IMAGE_TAG -t public.ecr.aws/g3h6f1a5/erp-backend:latest .
         docker push -a public.ecr.aws/g3h6f1a5/erp-backend
